<resources>
    <string name="app_name">EcoPeer</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="style_choose">Choose style</string>
    <string name="maps_api_key">IzaSyBmhvDr-v-LKxLP9oRT1r5ymsYXAJuYLd4</string>
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>
    <string name="style_label_no_pois_no_transit">No POIs or transit</string>
    <string name="style_label_default">Default</string>
    <string name="style_set_to">Style set to: %1$s</string>
    <string name="style_actyvi_rez">Aktyvi rezervacija </string>
    <string name="style_rezerv_istor">Rezervacijų istorija</string>
    <string name="style_prid_aut_val_num">Automobilio valstybinis numeris</string>
    <string name="style_mok_bud">Mokejimo budas</string>
    <string name="menu_activity">menu</string>
    <string name="usd">$</string>
    <string name="your_personal_qr_code">Your personal QR code</string>
    <string name="home">Home</string>
    <string name="coupons">Coupons</string>
    <string name="map">Map</string>
    <string name="qr_code">QR Code</string>
    <string name="rating">Rating</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_prize">PrizeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_prizes_for_the_sustainability_points_you_ve_collected">Get prizes for the sustainability points you\'ve collected!</string>
    <string name="discount_voucher_3">Discount Voucher 3</string>
    <string name="discount_voucher_2">Discount Voucher 2</string>
    <string name="discount_voucher_1">Discount Voucher 1</string>
    <string name="discount_voucher_4">Discount Voucher 4</string>
    <string name="_500_points">500 POINTS</string>
    <string name="_2000_points">2000 POINTS</string>
    <string name="_3500_points">3500 POINTS</string>
    <string name="_5000_points">5000 POINTS</string>
    <string name="todo">TODO</string>
    <string name="set_a_goal">Set a goal</string>
    <string name="go_ahead_set_your_goal">Go ahead. Set your goal!</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
</resources>