<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrizeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/get_prizes_for_the_sustainability_points_you_ve_collected"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgView1"
        android:layout_width="263dp"
        android:layout_height="128dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/todo"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/imgView2"
        android:layout_width="263dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView1"
        tools:srcCompat="@tools:sample/backgrounds/scenic[4]"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imgView3"
        android:layout_width="263dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView2"
        tools:srcCompat="@tools:sample/backgrounds/scenic[1]"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imgView4"
        android:layout_width="263dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView3"
        tools:srcCompat="@tools:sample/backgrounds/scenic[3]"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/imgText1"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/discount_voucher_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imgView1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/imgText2"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/discount_voucher_2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imgView2"
        app:layout_constraintTop_toBottomOf="@+id/imgText1" />

    <TextView
        android:id="@+id/imgText3"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="@string/discount_voucher_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imgView3"
        app:layout_constraintTop_toBottomOf="@+id/imgText2" />

    <TextView
        android:id="@+id/imgText4"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/discount_voucher_4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imgView4"
        app:layout_constraintTop_toBottomOf="@+id/imgText3" />

    <TextView
        android:id="@+id/couponNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_500_points"
        android:textColor="#17AA1D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgView1"
        app:layout_constraintTop_toBottomOf="@+id/imgText1" />

    <TextView
        android:id="@+id/couponNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2000_points"
        android:textColor="#17AA1D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgView2"
        app:layout_constraintTop_toBottomOf="@+id/imgText2" />

    <TextView
        android:id="@+id/couponNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3500_points"
        android:textColor="#17AA1D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgView3"
        app:layout_constraintTop_toBottomOf="@+id/imgText3" />

    <TextView
        android:id="@+id/couponNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5000_points"
        android:textColor="#17AA1D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/imgView4"
        app:layout_constraintTop_toBottomOf="@+id/imgText4"
        app:layout_constraintVertical_bias="0.315" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couponNumber4">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <ImageButton
            android:id="@+id/menu_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="onHomeButtonClick"
            android:src="@drawable/ic_main_menu"
            app:iconGravity="textStart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <ImageButton
            android:id="@+id/dis_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:src="@drawable/ic_discounts_menu"
            app:iconGravity="textStart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="onMapButtonClick"
            android:src="@drawable/ic_map_menu"
            app:iconGravity="textStart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="onQRCodeButtonClick"
            android:src="@drawable/ic_qr_menu"
            app:iconGravity="textStart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <ImageButton
            android:id="@+id/sco_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="onScoreButtonClick"
            android:src="@drawable/ic_score_menu"
            app:iconGravity="textStart" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>


        <TextView
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/home"
            android:textSize="8dp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>


        <TextView
            android:id="@+id/Coupons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/coupons"
            android:textSize="8dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <TextView
            android:id="@+id/Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/map"
            android:textSize="8dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <TextView
            android:id="@+id/Qr_Code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/qr_code"
            android:textSize="8dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <TextView
            android:id="@+id/Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/rating"
            android:textSize="8dp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>