<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="603dp">

        </androidx.fragment.app.FragmentContainerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/ic_main_menu"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/dis_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/ic_discounts_menu"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/map_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/ic_map_menu"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/ic_qr_menu"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageButton
                android:id="@+id/sco_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/ic_score_menu"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>


            <TextView
                android:id="@+id/Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/home"
                android:textSize="8dp" />


            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>


            <TextView
                android:id="@+id/Coupons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/coupons"
                android:textSize="8dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <TextView
                android:id="@+id/Map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/map"
                android:textSize="8dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <TextView
                android:id="@+id/Qr_Code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/qr_code"
                android:textSize="8dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <TextView
                android:id="@+id/Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/rating"
                android:textSize="8dp" />


            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>



        </LinearLayout>
    </LinearLayout>

</FrameLayout>